--- a/public/css/style.css
+++ b/public/css/style.css
@@ -22,9 +22,17 @@ li {
 }
 
 #chargement {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  cursor: progress;
+}
+
+#chargement::before {
+  content: "";
   border: 12px solid #9356DC;
   border-radius: 50%;
-  border-top: 12px solid rgba(255, 255, 255, 0.1);
+  border-top: 12px solid rgb(255, 255, 255);
   width: 40vw;
   height: 40vw;
   animation: spin 2s;
@@ -35,9 +43,34 @@ li {
   right: 0;
   margin: auto;
   opacity: 0;
+  z-index: 2;
+  position: absolute;
+}
+
+#chargement::after {
+  content: "";
+  background: rgb(255, 255, 255);
+  opacity: 0;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  position: absolute;
+  transform-origin: auto;
+  animation: spin-background 2s;
   z-index: 1;
 }
 
+@keyframes spin-background {
+  0% {
+    opacity: 0.6;
+  }
+  99% {
+    opacity: 0.6;
+  }
+  100% {
+    opacity: 0;
+  }
+}
 @keyframes spin {
   0% {
     transform: rotate(0deg);
@@ -695,6 +728,7 @@ footer ul li .fa-utensils {
   .super-container article {
     display: block;
     margin-left: 4vw;
+    width: 27.5%;
   }
 }
 
@@ -753,6 +787,7 @@ footer ul li .fa-utensils {
   .container-menue_plat p {
     font-size: 1.2vw;
     padding: 1vw 4vw 0 1vw;
+    width: 30%;
   }
 }
 .container-menue_plat .prix {
